--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -106,6 +106,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLGridMap",NewName="/Script/SnakeRoguelike.SLProceduralMesh")
++ClassRedirects=(OldName="/Script/SnakeRoguelike.SLSnakeTail",NewName="/Script/SnakeRoguelike.SLSnakeBody")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
