Reworking on like. Everything. New Movement

--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -107,6 +107,7 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLGridMap",NewName="/Script/SnakeRoguelike.SLProceduralMesh")
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLSnakeTail",NewName="/Script/SnakeRoguelike.SLSnakeBody")
++ClassRedirects=(OldName="/Script/SnakeRoguelike.SLObstacle",NewName="/Script/SnakeRoguelike.SLCellObject")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
