Full working game loop of base snake

--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -108,6 +108,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLGridMap",NewName="/Script/SnakeRoguelike.SLProceduralMesh")
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLSnakeTail",NewName="/Script/SnakeRoguelike.SLSnakeBody")
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLObstacle",NewName="/Script/SnakeRoguelike.SLCellObject")
++PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.PrevTailPos",NewName="/Script/SnakeRoguelike.SLSnake.PrevTailGridPos")
++PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.DirectionUpdate",NewName="/Script/SnakeRoguelike.SLSnake.InputDirection")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
