--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ SnakeRoguelike/.DS_Store
 SnakeRoguelike/Source/.DS_Store
 SnakeRoguelike/Source/SnakeRoguelike/.DS_Store
 Documents/.DS_Store
+Documents/SnakeRogueLikeDoc/.DS_Store
