--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -109,7 +109,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLSnakeTail",NewName="/Script/SnakeRoguelike.SLSnakeBody")
 +ClassRedirects=(OldName="/Script/SnakeRoguelike.SLObstacle",NewName="/Script/SnakeRoguelike.SLCellObject")
 +PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.PrevTailPos",NewName="/Script/SnakeRoguelike.SLSnake.PrevTailGridPos")
-+PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.DirectionUpdate",NewName="/Script/SnakeRoguelike.SLSnake.InputDirection")
++PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.DirectionUpdate",NewName="/Script/SnakeRoguelike.SLSnake.LastQueuedDir")
++PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.InputDirection",NewName="/Script/SnakeRoguelike.SLSnake.LastQueuedDir")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
