--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/NewWorld.NewWorld
+GameDefaultMap=/Game/Maps/MainMenu_Level.MainMenu_Level
 ServerDefaultMap=None
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -22,11 +22,11 @@ r.GenerateMeshDistanceFields=True
 
 r.DynamicGlobalIlluminationMethod=0
 
-r.ReflectionMethod=2
+r.ReflectionMethod=0
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=True
+r.RayTracing=False
 
 r.Shadow.Virtual.Enable=1
 
@@ -36,6 +36,12 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
+r.AllowOcclusionQueries=False
+r.Lumen.HardwareRayTracing=True
+r.Nanite.ProjectEnabled=False
+r.Nanite = 0
+r.NormalMapsForStaticLighting=True
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
