--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -42,6 +42,9 @@ r.Nanite.ProjectEnabled=False
 r.Nanite = 0
 r.NormalMapsForStaticLighting=True
 r.DefaultFeature.AutoExposure=False
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
+r.AntiAliasingMethod=3
+r.ForwardShading=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
