--- a/SnakeRoguelike/SnakeRoguelike.uproject
+++ b/SnakeRoguelike/SnakeRoguelike.uproject
@@ -16,98 +16,96 @@
 	],
 	"Plugins": [
 		{
+			"Name": "Fab",
+			"Enabled": false
+		},
+		{
+			"Name": "GeometryCollectionPlugin",
+			"Enabled": true
+		},
+		{
+			"Name": "FullBodyIK",
+			"Enabled": true
+		},
+		{
+			"Name": "Fracture",
+			"Enabled": true
+		},
+		{
+			"Name": "EditorScriptingUtilities",
+			"Enabled": true
+		},
+		{
+			"Name": "DeformerGraph",
+			"Enabled": true
+		},
+		{
+			"Name": "ContentBrowserFileDataSource",
+			"Enabled": true
+		},
+		{
+			"Name": "ComputeFramework",
+			"Enabled": true
+		},
+		{
+			"Name": "CharacterAI",
+			"Enabled": false
+		},
+		{
+			"Name": "ChaosCaching",
+			"Enabled": true
+		},
+		{
+			"Name": "Bridge",
+			"Enabled": false
+		},
+		{
+			"Name": "BaseCharacterFXEditor",
+			"Enabled": true
+		},
+		{
+			"Name": "AudioWidgets",
+			"Enabled": true
+		},
+		{
+			"Name": "AudioSynesthesia",
+			"Enabled": true
+		},
+		{
+			"Name": "HairStrands",
+			"Enabled": true
+		},
+		{
+			"Name": "LiveLink",
+			"Enabled": true
+		},
+		{
 			"Name": "ModelingToolsEditorMode",
-			"Enabled": true,
-			"TargetAllowList": [
-				"Editor"
-			]
+			"Enabled": true
 		},
 		{
-			"Name": "EnvironmentQueryEditor",
-			"Enabled": false
+			"Name": "PythonScriptPlugin",
+			"Enabled": true
 		},
 		{
-			"Name": "AlembicImporter",
-			"Enabled": false
+			"Name": "RigLogic",
+			"Enabled": true
 		},
 		{
-			"Name": "WindowsMoviePlayer",
-			"Enabled": false
+			"Name": "SequencerScripting",
+			"Enabled": true
 		},
 		{
-			"Name": "WmfMedia",
-			"Enabled": false
+			"Name": "Takes",
+			"Enabled": true
 		},
 		{
-			"Name": "SkeletalMeshModelingTools",
-			"Enabled": false
+			"Name": "TemplateSequence",
+			"Enabled": true
 		},
 		{
-			"Name": "SkeletalReduction",
-			"Enabled": false
-		},
-		{
-			"Name": "AISupport",
-			"Enabled": false
-		},
-		{
-			"Name": "ActorSequence",
-			"Enabled": false
-		},
-		{
-			"Name": "ActorLayerUtilities",
-			"Enabled": false
-		},
-		{
-			"Name": "N10XSourceCodeAccess",
-			"Enabled": false
-		},
-		{
-			"Name": "AndroidDeviceProfileSelector",
-			"Enabled": false
-		},
-		{
-			"Name": "AndroidMedia",
-			"Enabled": false
-		},
-		{
-			"Name": "AndroidMoviePlayer",
-			"Enabled": false
-		},
-		{
-			"Name": "OnlineSubsystemGooglePlay",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Android"
-			]
-		},
-		{
-			"Name": "AndroidPermission",
-			"Enabled": false
-		},
-		{
-			"Name": "AndroidFileServer",
-			"Enabled": false
-		},
-		{
-			"Name": "ACLPlugin",
-			"Enabled": false
-		},
-		{
-			"Name": "AnimationData",
-			"Enabled": false
-		},
-		{
-			"Name": "AnimationModifierLibrary",
-			"Enabled": false
-		},
-		{
-			"Name": "AnimationSharing",
-			"Enabled": false
-		},
-		{
-			"Name": "AppleImageUtils",
-			"Enabled": false
+			"Name": "USDCore",
+			"Enabled": true
 		}
 	]
 }
