--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -36,15 +36,18 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
-r.AllowOcclusionQueries=False
+r.AllowOcclusionQueries=True
 r.Lumen.HardwareRayTracing=True
 r.Nanite.ProjectEnabled=False
 r.Nanite = 0
 r.NormalMapsForStaticLighting=True
 r.DefaultFeature.AutoExposure=False
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
-r.AntiAliasingMethod=3
-r.ForwardShading=True
+r.AntiAliasingMethod=4
+r.ForwardShading=False
+r.MobileHDR=True
+r.Mobile.AntiAliasing=1
+r.Mobile.ShadingPath=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
