end of day, gotten art references

--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -100,6 +100,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SnakeRoguelike")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SnakeRoguelike")
+NearClipPlane=10.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
