--- a/SnakeRoguelike/SnakeRoguelike.uproject
+++ b/SnakeRoguelike/SnakeRoguelike.uproject
@@ -10,7 +10,9 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"CoreUObject"
+				"CoreUObject",
+				"GameplayAbilities",
+				"EnhancedInput"
 			]
 		}
 	],
@@ -105,6 +107,10 @@
 		},
 		{
 			"Name": "USDCore",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
 			"Enabled": true
 		}
 	]
