Working on bouncy buttons. Bunch of writing in doc.
Reminder: Remove Physics handle and disable tick on everything but the interaction component

--- a/SnakeRoguelike/Config/DefaultGameplayTags.ini
+++ b/SnakeRoguelike/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.GridWrap",DevComment="yup")
 +GameplayTagList=(Tag="InputTag.Ability01",DevComment="Ability 01")
 +GameplayTagList=(Tag="InputTag.Ability02",DevComment="Ability02")
 +GameplayTagList=(Tag="InputTag.Ability03",DevComment="Ability 03")
