--- a/SnakeRoguelike/Config/DefaultEngine.ini
+++ b/SnakeRoguelike/Config/DefaultEngine.ini
@@ -124,6 +124,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.PrevTailPos",NewName="/Script/SnakeRoguelike.SLSnake.PrevTailGridPos")
 +PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.DirectionUpdate",NewName="/Script/SnakeRoguelike.SLSnake.LastQueuedDir")
 +PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.InputDirection",NewName="/Script/SnakeRoguelike.SLSnake.LastQueuedDir")
++PropertyRedirects=(OldName="/Script/SnakeRoguelike.SLSnake.ASC",NewName="/Script/SnakeRoguelike.SLSnake.Asc")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
