--- a/SnakeRoguelike/Config/DefaultGameplayTags.ini
+++ b/SnakeRoguelike/Config/DefaultGameplayTags.ini
@@ -14,8 +14,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Ability02",DevComment="Ability02")
 +GameplayTagList=(Tag="InputTag.Ability03",DevComment="Ability 03")
 +GameplayTagList=(Tag="InputTag.Ability04",DevComment="Ability 04")
++GameplayTagList=(Tag="InputTag.Click",DevComment="")
 +GameplayTagList=(Tag="InputTag.Down",DevComment="Down")
++GameplayTagList=(Tag="InputTag.Grab",DevComment="")
 +GameplayTagList=(Tag="InputTag.Left",DevComment="Left")
++GameplayTagList=(Tag="InputTag.Press",DevComment="")
 +GameplayTagList=(Tag="InputTag.Right",DevComment="Right")
 +GameplayTagList=(Tag="InputTag.Up",DevComment="Up")
 
